# Shibalnu-Demo

Android/: README.md
Android/AndroidCmakeList/: settings.gradle
Android/AndroidCmakeList/app/: build.gradle
Android/AndroidCmakeList/app/src/androidTest/java/com/shibalnu/androidcmakelist/: ExampleInstrumentedTest.kt
Android/AndroidCmakeList/app/src/main/: AndroidManifest.xml
Android/AndroidCmakeList/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Android/AndroidCmakeList/app/src/main/java/com/shibalnu/androidcmakelist/: MainActivity.kt
Android/AndroidCmakeList/app/src/main/res/values/: strings.xml
Android/AndroidCmakeList/gradle/wrapper/: gradle-wrapper.properties
Android/ShibalnuAndroid/: settings.gradle
Android/ShibalnuAndroid/app/: build.gradle
Android/ShibalnuAndroid/app/src/androidTest/java/com/trust/shibalnuandroid/: ExampleInstrumentedTest.kt
Android/ShibalnuAndroid/app/src/main/: AndroidManifest.xml
Android/ShibalnuAndroid/app/src/main/java/com/trust/shibalnuandroid/: MainActivity.kt
Android/ShibalnuAndroid/app/src/main/res/values/: strings.xml
Android/ShibalnuAndroid/app/src/test/java/com/trust/shibalnuandroid/: ExampleUnitTest.kt  KtDebug.kt  KtDebugConfig.kt  KtTestXC.kt  ktTest.kt
Android/ShibalnuAndroid/gradle/wrapper/: gradle-wrapper.properties
Android/ShibalnuAppManger/: README.md
Android/ShibalnuAppManger/Android/ShibalnuAndroid/app/: build.gradle
Android/ShibalnuAppManger/Android/ShibalnuAppManger/: build.gradle  settings.gradle
Android/ShibalnuAppManger/Android/ShibalnuAppManger/gradle/wrapper/: gradle-wrapper.properties
Android/ShibalnuAppManger/Android/ShibalnuCmakelist/app/: build.gradle
Android/ShibalnuAppManger/Android/ShibalnuCmakelist/app/src/main/res/values/: strings.xml
Android/ShibalnuAppManger/Android/ShibalnuCpp/app/src/main/cpp/studyCpp/: mainTrust.cpp
Android/ShibalnuAppManger/Android/ShibalnuMk/app/src/main/cpp/: Login.c
Android/ShibalnuAppManger/C++/ShibalnuC++/ndk_code_3/: ndk_code3.h
Android/ShibalnuAppManger/Cpp/: main.c
Android/ShibalnuAppManger/Cpp/ndk6/: Log.h  ndk6.h
Android/ShibalnuAppManger/ShibalnuAppMangerLib/: build.gradle
Android/ShibalnuAppManger/ShibalnuAppMangerLib/src/main/: AndroidManifest.xml
Android/ShibalnuAppManger/ShibalnuAppMangerLib/src/main/java/com/shibalnu/appmangerlib/: ShibalnuAppManger.kt
Android/ShibalnuAppManger/app/: build.gradle
Android/ShibalnuAppManger/app/src/main/java/com/shibalnu/appmanger/: MainActivity.kt
Android/ShibalnuAppManger/app/src/main/res/layout/: activity_main.xml
Android/ShibalnuAppManger/app/src/main/res/values/: strings.xml
Android/ShibalnuAppManger/gradle/wrapper/: gradle-wrapper.properties
Android/ShibalnuAppMangerLib/src/main/: AndroidManifest.xml
Android/ShibalnuCmakelist/: settings.gradle
Android/ShibalnuCmakelist/app/: build.gradle
Android/ShibalnuCmakelist/app/src/androidTest/java/com/shibalnu/cmakelist/: ExampleInstrumentedTest.kt
Android/ShibalnuCmakelist/app/src/main/: AndroidManifest.xml
Android/ShibalnuCmakelist/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Android/ShibalnuCmakelist/app/src/main/java/com/shibalnu/cmakelist/: MainActivity.kt
Android/ShibalnuCmakelist/gradle/wrapper/: gradle-wrapper.properties
Android/ShibalnuCpp/: settings.gradle
Android/ShibalnuCpp/app/: build.gradle
Android/ShibalnuCpp/app/src/androidTest/java/com/trust/shibalnucpp/: ExampleInstrumentedTest.kt
Android/ShibalnuCpp/app/src/main/: AndroidManifest.xml
Android/ShibalnuCpp/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Android/ShibalnuCpp/app/src/main/cpp/studyCpp/: Student.cpp  Student.h  TrustExtends.cpp  TrustExtends.h  TrustInstance.cpp  TrustInstance.h  TrustLog.h  mainTrust.cpp  mainTrust.h
Android/ShibalnuCpp/app/src/main/java/com/trust/shibalnucpp/: Dog.kt  JniTest.java  MainActivity.kt  Person.java  Student.java
Android/ShibalnuCpp/app/src/main/res/layout/: activity_main.xml
Android/ShibalnuCpp/app/src/main/res/values/: strings.xml
Android/ShibalnuCpp/gradle/wrapper/: gradle-wrapper.properties
Android/ShibalnuFFmpegRtmp/: settings.gradle
Android/ShibalnuFFmpegRtmp/app/: build.gradle
Android/ShibalnuFFmpegRtmp/app/src/androidTest/java/com/shibalnu/ffmpegrtmp/: ExampleInstrumentedTest.kt
Android/ShibalnuFFmpegRtmp/app/src/main/: AndroidManifest.xml
Android/ShibalnuFFmpegRtmp/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JNICallBack.cpp  JNICallBack.h  Mr_Li_Log.h  TrustPlayer.cpp  TrustPlayer.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
Android/ShibalnuFFmpegRtmp/app/src/main/java/com/shibalnu/ffmpegrtmp/: Biji  Config.kt  MainActivity.kt  PlayerUtils.kt
Android/ShibalnuFFmpegRtmp/app/src/main/res/layout/: activity_main.xml
Android/ShibalnuFFmpegRtmp/app/src/main/res/values/: strings.xml
Android/ShibalnuFFmpegRtmp/gradle/wrapper/: gradle-wrapper.properties
Android/ShibalnuMk/: settings.gradle
Android/ShibalnuMk/app/: build.gradle
Android/ShibalnuMk/app/src/: Android.mk
Android/ShibalnuMk/app/src/main/: AndroidManifest.xml
Android/ShibalnuMk/app/src/main/cpp/: Login.c  Reigster.c
Android/ShibalnuMk/app/src/main/res/layout/: activity_main.xml
Android/ShibalnuMk/app/src/main/res/values/: strings.xml
Android/ShibalnuMk/gradle/wrapper/: gradle-wrapper.properties
C++/ShibalnuC++/: CMakeLists.txt  main.c
C++/ShibalnuC++/ndk_code_1/: Ndk_code_1.c
C++/ShibalnuC++/ndk_code_2/: ndk_code2.c  ndk_code2.h
C++/ShibalnuC++/ndk_code_3/: ndk_code3.c
Cpp/: CMakeLists.txt  cppfile.txt  file.txt  main.cpp  main.h
Cpp/ndk6/: ndk6.cpp  ndk6.h  safe_queue_tool.h
Java/src/com/trust/shibalnu/: Main.java
ShibalnuAppMangerLib/src/main/java/com/shibalnu/appmangerlib/: ShibalnuAppManger.kt
ShibalnuAppMangerLib/src/test/java/com/shibalnu/appmangerlib/: ShibalnuDebugConfig.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/shibalnu/appmanger/model/: SharkCmdConfig.kt  SharkOtaModel.kt
app/src/main/res/layout/: activity_main.xml
(+16 files in other folders)
